--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,6 +4,6 @@ module.exports =
 {
   config: resolve(__dirname, 'src', 'config', 'database.js'),
   'models-path': resolve(__dirname,'src','app', 'models'),
-  'migrations-path': resolve(__dirname,'src','app', 'migrations'),
-  'seeders-path': resolve(__dirname,'src','app', 'seeds'),
+  'migrations-path': resolve(__dirname,'src','database', 'migrations'),
+  'seeders-path': resolve(__dirname,'src','database', 'seeds'),
 }
