--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_UL=http://localhost:3003
+APP_URL=http://localhost:3003
+FRONT_URL=http://localhost:3000
 NODE_ENV=development
 
 # Auth
@@ -17,8 +18,8 @@ DB_NAME=
 MONGO_URL=
 # Redis
 
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
+REDIS_HOST=
+REDIS_PORT=
 
 
 # Mail
